--- a/package.json
+++ b/package.json
@@ -3,17 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@sweetalert/with-react": "^0.1.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
-    "formik": "^2.1.4",
     "modali": "^1.2.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-scripts": "3.4.0",
     "react-text-mask": "^5.4.3",
     "styled-components": "^5.0.1",
-    "yup": "^0.28.1"
+    "sweetalert": "^2.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
